force-app/main/default/objects/RSI_Insurance_Policy_Participant__c/RSI_Insurance_Policy_Participant__c.object-meta.xml
<CustomObject>
    <label>Policy Participant</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Insurance Policy Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>