force-app/main/default/objects/RSI_Insurance_Policy_Participant__c/fields/RSI_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>RSI_Date_Of_Birth__c</fullName>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>