force-app/main/default/objects/RSI_Insurance_Policy_Participant__c/fields/RSI_Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>RSI_Participant_Name__c</fullName>
    <label>Participant Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>