force-app/main/default/objects/RSI_Insurance_Policy_Participant__c/fields/RSI_Role_relationship_with_Policy_Holder__c.field-meta.xml
<CustomField>
    <fullName>RSI_Role_relationship_with_Policy_Holder__c</fullName>
    <label>Role(relationship with Policy Holder)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Driver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>